mindfulness/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindfulness
  labels:
    app: mindfulness
spec:
  selector:
    app: mindfulness
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
