mindfulness/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mindfulness
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /focus
            pathType: Prefix
            backend:
              service:
                name: mindfulness
                port:
                  number: 80
